<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Invisible Painting</string>
    <string name="scan_log_activity_name">Wifi History</string>
    <string name="detail_notes_hint">Notes about this network</string>
    <string name="detail_ssid">SSID</string>
    <string name="detail_bssid">BSSID</string>
    <string name="detail_password">Password</string>
    <string name="detail_last_seen">Last Seen:</string>
    <string name="detail_location">Location:</string>
    <string name="detail_security">Security</string>
    <string name="wifi_detail_activity_name">Scan Details</string>
    <string name="scan_menu_refresh">Refresh</string>
    <string name="scan_menu_clear">Clear</string>
    <string name="dialog_activate_wifi">Wifi appears to be off. Would you like to turn it on?</string>
    <string name="details_frequency">Frequency:</string>
    <string name="detail_signal">Signal Strength:</string>
    <string name="detail_login_button">Connect</string>
    <string name="login_successful">Login was successful</string>
    <string name="login_failed">Login failed</string>
    <string name="wifi_add_failure">Failed to add network</string>
    <string name="title_activity_home">Invisible Painting</string>
    <string name="scan_log">Wifi Scan History</string>
    <string name="wifi_scanner_service_name">Wifi Scanner Service</string>
    <string name="title_activity_live_scan">Live Scan</string>
    <string name="live_scan">Live Wifi Scan</string>
    <string name="wifi_strength_desc">Wifi signal strength</string>
    <string name="blue_lock">A blue padlock</string>
    <string name="menu_about">About</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_confirm_clear">Permenantly erase the entire scan log?</string>
    <string name="scan_log_empty">No scan data to display. Refresh to check again.</string>

</resources>