<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/detail_ssid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_ssid"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/detail_bssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_bssid"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/detail_location_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:text="@string/detail_location" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detail_last_seen_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:text="@string/detail_last_seen" />

        <TextView
            android:id="@+id/detail_last_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detail_frequency_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:text="@string/details_frequency" />

        <TextView
            android:id="@+id/detail_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detail_signal_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:text="@string/detail_signal" />

        <TextView
            android:id="@+id/detail_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/detail_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_security"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/detail_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/detail_password"
        android:inputType="textPassword|textVisiblePassword" />

    <EditText
        android:id="@+id/detail_notes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/detail_notes_hint"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</LinearLayout>